--- a/sequence.reqmts.html
+++ b/sequence.reqmts.html
@@ -51,7 +51,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
                 </td><td class='left'>
  <i>Requires:</i> <span class='texttt'>T</span> shall be
  <span class='texttt'>CopyInsertable</span> into <span class='texttt'>X</span>.<br/>
- post: <span class='texttt'>distance(begin(), end()) == n</span><br/>
+ <i>Postconditions:</i> <span class='texttt'>distance(begin(), end()) == n</span><br/>
  Constructs a sequence container with <span class='texttt'>n</span> copies of <span class='texttt'>t</span>  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(i, j)</span><br/>
 <span class='texttt'>X u(i, j);</span>   </td><td class='left'>
                     </td><td class='left'>
@@ -61,7 +61,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
  shall also be
  <span class='texttt'>MoveInsertable</span> into <span class='texttt'>X</span>.
  Each iterator in the range <span class='texttt'>[i, j)</span> shall be dereferenced exactly once.<br/>
- post: <span class='texttt'>distance(begin(), end()) ==</span>
+ <i>Postconditions:</i> <span class='texttt'>distance(begin(), end()) ==</span>
  <span class='texttt'>distance(i, j)</span><br/>
  Constructs a sequence container equal to the range <span class='texttt'>[i, j)</span>    </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>X(il)</span>      </td><td class='left'>
                     </td><td class='left'>
@@ -101,7 +101,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
  <span class='texttt'>MoveInsertable</span> into <span class='texttt'>X</span>, <span class='texttt'>MoveConstructible</span>, <span class='texttt'>MoveAssignable</span>,
  and swappable (<a href='swappable.requirements'>[swappable.requirements]</a>).
  Each iterator in the range <span class='texttt'>[i, j)</span> shall be dereferenced exactly once.<br/>
- pre: <span class='texttt'>i</span> and <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.<br/>
+ <i>Requires:</i> <span class='texttt'>i</span> and <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.<br/>
  Inserts copies of elements in <span class='texttt'>[i, j)</span> before <span class='texttt'>p</span>  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.insert(p, il)</span>  </td><td class='left'>
   <span class='texttt'>iterator</span>            </td><td class='left'>
   <span class='texttt'>a.insert(p, il.begin(), il.end())</span>.  </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.erase(q)</span>  </td><td class='left'>
@@ -116,7 +116,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
  <span class='texttt'>void</span>       </td><td class='left'>
  Destroys all elements in <span class='texttt'>a</span>. Invalidates all references, pointers, and
  iterators referring to the elements of <span class='texttt'>a</span> and may invalidate the past-the-end iterator.<br/>
- post: <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>.<br/>
+ <i>Postconditions:</i> <span class='texttt'>a.empty()</span> returns <span class='texttt'>true</span>.<br/>
  <i>Complexity:</i> Linear.      </td></tr><tr class='rowsep'><td class='left'> <span class='texttt'>a.assign(i,j)</span>   </td><td class='left'>
  <span class='texttt'>void</span>           </td><td class='left'>
  <i>Requires:</i> <span class='texttt'>T</span> shall be <span class='texttt'>EmplaceConstructible</span> into <span class='texttt'>X</span> from <span class='texttt'>*i</span>
@@ -125,7 +125,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
  shall also be
  <span class='texttt'>MoveInsertable</span> into <span class='texttt'>X</span>.<br/>
  Each iterator in the range <span class='texttt'>[i, j)</span> shall be dereferenced exactly once.<br/>
- pre: <span class='texttt'>i</span>, <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.<br/>
+ <i>Requires:</i> <span class='texttt'>i</span>, <span class='texttt'>j</span> are not iterators into <span class='texttt'>a</span>.<br/>
  Replaces elements in <span class='texttt'>a</span> with a copy of <span class='texttt'>[i, j)</span>.<br/>
  Invalidates all references, pointers and iterators
  referring to the elements of <span class='texttt'>a</span>.
@@ -137,7 +137,7 @@ a non-const rvalue of <span class='texttt'>X::value_type</span>.
  <i>Requires:</i> <span class='texttt'>T</span> shall be
  <span class='texttt'>CopyInsertable</span> into <span class='texttt'>X</span>
  and <span class='texttt'>CopyAssignable</span>.<br/>
- pre: <span class='texttt'>t</span> is not a reference into <span class='texttt'>a</span>.<br/>
+ <i>Requires:</i> <span class='texttt'>t</span> is not a reference into <span class='texttt'>a</span>.<br/>
  Replaces elements in <span class='texttt'>a</span> with <span class='texttt'>n</span> copies of <span class='texttt'>t</span>.<br/>
  Invalidates all references, pointers and iterators
  referring to the elements of <span class='texttt'>a</span>.
